--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -13,10 +13,13 @@
   --foreground: #171717;
   --main-color: oklch(0.5471 0.2491 283.76);
   --main-light-color: oklch(0.5971 0.235 283.76);
+  --main-soft-color: oklch(93.411% 0.03114 283.76);
+  --main-dark-color: oklch(50.689% 0.2471 282.341);
   --accent-color: #eb5757;
   --gray-50: #f2f2f2;
   --gray-100: #c4c4c4;
   --gray-200: #767676;
+  --gray-300: #686868;
 
   /* 폰트 사이즈 */
   --text-base: 1rem;
