--- a/src/styles/theme.css
+++ b/src/styles/theme.css
@@ -6,9 +6,12 @@
   --color-foreground: var(--foreground);
   --color-primary: var(--main-color);
   --color-primary-light: var(--main-light-color);
+  --color-primary-soft: var(--main-soft-color);
+  --color-primary-dark: var(--main-dark-color);
   --color-gray-50: var(--gray-50);
   --color-gray-100: var(--gray-100);
   --color-gray-200: var(--gray-200);
+  --color-gray-300: var(--gray-300);
   --color-accent: var(--accent-color);
 
   /* 폰트 사이즈 */
